--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <groupId>com.fasterxml.jackson</groupId>
     <artifactId>jackson-parent</artifactId>
-    <version>2.7</version>
+    <version>2.8-rc1-SNAPSHOT</version>
   </parent>
   <groupId>com.fasterxml.jackson.datatype</groupId>
   <artifactId>jackson-datatype-joda</artifactId>
   <name>Jackson-datatype-Joda</name>
-  <version>2.7.5-SNAPSHOT</version>
+  <version>2.8.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <description>Add-on module for Jackson (http://jackson.codehaus.org) to support
 Joda (http://joda-time.sourceforge.net/) data types.
@@ -22,11 +22,7 @@ Joda (http://joda-time.sourceforge.net/) data types.
     <tag>HEAD</tag>
   </scm>
   <properties>
-    <version.jackson.core>2.7.4</version.jackson.core>
-
-    <!-- 23-Feb-2016, tatu: Try to keep JDK6 runtime, still -->
-    <javac.src.version>1.6</javac.src.version>
-    <javac.target.version>1.6</javac.target.version>
+    <version.jackson.core>2.8.0-SNAPSHOT</version.jackson.core>
 
     <!-- Generate PackageVersion.java into this directory. -->
     <packageVersion.dir>com/fasterxml/jackson/datatype/joda</packageVersion.dir>
@@ -60,10 +56,17 @@ Joda (http://joda-time.sourceforge.net/) data types.
     <dependency>
         <groupId>joda-time</groupId>
         <artifactId>joda-time</artifactId>
-        <!-- Upgraded to 2.2 for Jackson 2.4: but let's try not to call any 2.2 methods
-             Similarly 2.4 for Jackson 2.7
+        <!-- Baseline was 2.2 for Jackson 2.4: no new functionality used from laster
+             versions but gradually increasing baseline to get bugfixes etc
           -->
-        <version>2.4</version>
+        <version>2.7</version>
+    </dependency>
+
+    <!-- and junit for testing -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
     </dependency>
 
   </dependencies>
