--- a/pom.xml
+++ b/pom.xml
@@ -54,8 +54,11 @@ Joda (http://joda-time.sourceforge.net/) data types.
         <artifactId>joda-time</artifactId>
         <!-- Baseline was 2.2 for Jackson 2.4: no new functionality used from laster
              versions but gradually increasing baseline to get bugfixes etc
+
+             2.7 for Jackson 2.9
+             2.9[.9] for Jackson 2.10
           -->
-        <version>2.7</version>
+        <version>2.9.9</version>
     </dependency>
 
     <!-- and junit for testing -->
@@ -79,6 +82,13 @@ Joda (http://joda-time.sourceforge.net/) data types.
             <phase>generate-sources</phase>
           </execution>
         </executions>
+      </plugin>
+      <!--  19-Mar-2019, tatu: Add rudimentary JDK9+ module info. To build with JDK 8
+             will have to use `moduleInfoFile` as anything else requires JDK 9+
+        -->
+      <plugin>
+        <groupId>org.moditect</groupId>
+        <artifactId>moditect-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
