--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <groupId>com.fasterxml.jackson</groupId>
     <artifactId>jackson-base</artifactId>
-    <version>2.10.0</version>
+    <version>2.11.0-SNAPSHOT</version>
   </parent>
   <groupId>com.fasterxml.jackson.datatype</groupId>
   <artifactId>jackson-datatype-joda</artifactId>
   <name>Jackson-datatype-Joda</name>
-  <version>2.10.1-SNAPSHOT</version>
+  <version>2.11.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <description>Add-on module for Jackson (http://jackson.codehaus.org) to support
 Joda (http://joda-time.sourceforge.net/) data types.
@@ -57,6 +57,7 @@ Joda (http://joda-time.sourceforge.net/) data types.
 
              2.7 for Jackson 2.9
              2.9[.9] for Jackson 2.10
+             2.10+ REQUIRES Joda 2.9 (see #104)
           -->
         <version>2.9.9</version>
     </dependency>
