--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
   </parent>
   <groupId>com.fasterxml.jackson.datatype</groupId>
   <artifactId>jackson-datatype-joda</artifactId>
-  <name>Jackson-datatype-Joda</name>
-  <version>2.11.1.rc1-SNAPSHOT</version>
+  <name>Jackson datatype: Joda</name>
+  <version>2.11.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <description>Add-on module for Jackson (http://jackson.codehaus.org) to support
 Joda (http://joda-time.sourceforge.net/) data types.
