--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
   </parent>
   <groupId>com.fasterxml.jackson.datatype</groupId>
   <artifactId>jackson-datatype-joda</artifactId>
-  <name>Jackson-datatype-Joda</name>
+  <name>Jackson datatype: Joda</name>
   <version>3.0.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
-  <description>Add-on module for Jackson (http://jackson.codehaus.org) to support
-Joda (http://joda-time.sourceforge.net/) data types.
+  <description>Add-on module for Jackson (http://github.com/FasterXML/jackson) to support
+Joda (https://www.joda.org/joda-time/) data types.
   </description>
   <url>http://github.com/FasterXML/jackson-datatype-joda</url>    
   <scm>
