--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,9 @@
   <name>Jackson datatype: Joda</name>
   <version>2.11.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
-  <description>Add-on module for Jackson (http://jackson.codehaus.org) to support
-Joda (http://joda-time.sourceforge.net/) data types.
+  <description>Add-on module for Jackson (http://github.com/FasterXML/jackson) to support Joda (https://www.joda.org/joda-time/) data types.
   </description>
-  <url>http://wiki.fasterxml.com/JacksonModuleJoda</url>
+  <url>https://github.com/FasterXML/jackson-datatype-joda</url>
   <scm>
     <connection>scm:git:git@github.com:FasterXML/jackson-datatype-joda.git</connection>
     <developerConnection>scm:git:git@github.com:FasterXML/jackson-datatype-joda.git</developerConnection>
