--- a/pom.xml
+++ b/pom.xml
@@ -59,11 +59,11 @@
         <!-- Baseline was 2.2 for Jackson 2.4: no new functionality used from laster
              versions but gradually increasing baseline to get bugfixes etc
 
-             2.7 for Jackson 2.9
-             2.9[.9] for Jackson 2.10
-             2.10+ REQUIRES Joda 2.9 (see #104)
+             Jackson  2.9: Joda 2.7
+             Jackson 2.10: Joda 2.9[.9]
+             Jackson 2.12: Joda 2.10[.8]
           -->
-        <version>2.9.9</version>
+        <version>2.10.8</version>
     </dependency>
 
     <!-- and junit for testing -->
