--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <groupId>com.fasterxml.jackson.datatype</groupId>
   <artifactId>jackson-datatype-joda</artifactId>
   <name>Jackson datatype: Joda</name>
-  <version>2.14.0-rc2</version>
+  <version>2.14.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <description>Add-on module for Jackson (https://github.com/FasterXML/jackson) to support Joda (https://www.joda.org/joda-time/) data types.
   </description>
@@ -30,7 +30,7 @@
     <connection>scm:git:git@github.com:FasterXML/jackson-datatype-joda.git</connection>
     <developerConnection>scm:git:git@github.com:FasterXML/jackson-datatype-joda.git</developerConnection>
     <url>https://github.com/FasterXML/jackson-datatype-joda</url>
-    <tag>jackson-datatype-joda-2.14.0-rc2</tag>
+    <tag>HEAD</tag>
   </scm>
   <properties>
     <!-- Generate PackageVersion.java into this directory. -->
