--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <artifactId>jackson-datatype-joda</artifactId>
   <name>Jackson datatype: Joda</name>
   <version>2.15.0-SNAPSHOT</version>
-  <packaging>bundle</packaging>
+  <packaging>jar</packaging>
   <description>Add-on module for Jackson (https://github.com/FasterXML/jackson) to support Joda (https://www.joda.org/joda-time/) data types.
   </description>
   <url>https://github.com/FasterXML/jackson-datatype-joda</url>
@@ -36,6 +36,9 @@
     <!-- Generate PackageVersion.java into this directory. -->
     <packageVersion.dir>com/fasterxml/jackson/datatype/joda</packageVersion.dir>
     <packageVersion.package>${project.groupId}.joda</packageVersion.package>
+
+    <!-- for Reproducible Builds -->
+    <project.build.outputTimestamp>2022-11-27T00:00:00Z</project.build.outputTimestamp>
 
     <!-- Configuration properties for the OSGi maven-bundle-plugin -->
     <osgi.export>${project.groupId}.joda.*</osgi.export>
