--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <artifactId>jackson-datatype-joda</artifactId>
   <name>Jackson datatype: Joda</name>
   <version>3.0.0-SNAPSHOT</version>
-  <packaging>bundle</packaging>
+  <packaging>jar</packaging>
   <description>Add-on module for Jackson (http://github.com/FasterXML/jackson) to support
 Joda (https://www.joda.org/joda-time/) data types.
   </description>
@@ -30,6 +30,9 @@ Joda (https://www.joda.org/joda-time/) data types.
     <!-- Generate PackageVersion.java into this directory. -->
     <packageVersion.dir>tools/jackson/datatype/joda</packageVersion.dir>
     <packageVersion.package>${project.groupId}.joda</packageVersion.package>
+
+    <!-- for Reproducible Builds -->
+    <project.build.outputTimestamp>2022-11-27T00:00:00Z</project.build.outputTimestamp>
 
     <!-- Configuration properties for the OSGi maven-bundle-plugin -->
     <osgi.export>${project.groupId}.joda.*</osgi.export>
