--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       fail-fast: false
       matrix:
         java_version: ['8', '11', '17']
-        joda_version: ['2.3`, '2.9.9',  '2.10.14']
+        joda_version: ['2.3', '2.9.9',  '2.10.14']
         os: ['ubuntu-20.04']
     env:
       JAVA_OPTS: "-XX:+TieredCompilation -XX:TieredStopAtLevel=1"
