--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       fail-fast: false
       matrix:
         java_version: ['8', '11', '17']
-        joda_version: ['2.3', '2.9.9',  '2.10.14']
+        joda_version: ['2.9', '2.10.14', '2.12.2]
         os: ['ubuntu-20.04']
     env:
       JAVA_OPTS: "-XX:+TieredCompilation -XX:TieredStopAtLevel=1"
@@ -49,7 +49,7 @@ jobs:
       run: ./mvnw -B -q -ff -ntp -Dversion.joda=${{ matrix.joda_version }} surefire:test
     - name: Extract project Maven version
       id: projectVersion
-      run: echo ::set-output name=version::$(./mvnw org.apache.maven.plugins:maven-help-plugin:3.3.0:evaluate -DforceStdout -Dexpression=project.version -q)
+      run: echo "version=$(./mvnw org.apache.maven.plugins:maven-help-plugin:3.3.0:evaluate -DforceStdout -Dexpression=project.version -q)" >> $GITHUB_OUTPUT
     - name: Deploy snapshot
       if: github.event_name != 'pull_request' && matrix.java_version == '8' && matrix.joda_version == '2.10.14' && endsWith(steps.projectVersion.outputs.version, '-SNAPSHOT')
       env:
