--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
     branches:
     - master
     - "3.0"
-    - "2.16"
+    - "2.17"
     paths-ignore:
     - "README.md"
     - "release-notes/*"
@@ -12,7 +12,7 @@ on:
     branches:
     - master
     - "3.0"
-    - "2.16"
+    - "2.17"
     paths-ignore:
     - "README.md"
     - "release-notes/*"
@@ -22,7 +22,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java_version: ['8', '11', '17']
+        java_version: ['8', '11', '17', '21']
         joda_version: ['2.9', '2.10.14', '2.12.2']
         os: ['ubuntu-20.04']
     env:
