--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
         <version>${version.joda}</version>
     </dependency>
 
+    <!-- 20-Apr-2024, tatu: JUnit4 no longer from jackson-base, so: -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <!-- Alas, need to include snapshot reference since otherwise can not find
