--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,13 @@ Joda (https://www.joda.org/joda-time/) data types.
         <artifactId>joda-time</artifactId>
         <version>${version.joda}</version>
     </dependency>
+
+    <!-- 20-Apr-2024, tatu: JUnit4 no longer from jackson-base, so: -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
