--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,15 +48,9 @@ jobs:
         # See https://github.com/actions/setup-java/blob/v2/docs/advanced-usage.md#Publishing-using-Apache-Maven
         # gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }} # Value of the GPG private key to import
         # gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase
-    - name: Snapshot-or-not-plain-2
+    - name: Is snapshot?
       if: matrix.snapshot
-      run: echo "Run with snapshot/1"
-    - name: Snapshot-or-not-plain-2
-      if: ${{ matrix.snapshot }}
-      run: echo "Run with snapshot/2"
-    - name: Snapshot-or-not-1
-      if: ${{ matrix.snapshot == '1' }}
-      run: echo "Run with snapshot == 1"
+      run: echo "Job DOES have 'matrix.snapshot'!"
     - name: Build
       # Note: build separately first with default joda
       run: ./mvnw -B -q -ff -ntp -DskipTests clean package
@@ -67,17 +61,17 @@ jobs:
       id: projectVersion
       run: echo "version=$(./mvnw org.apache.maven.plugins:maven-help-plugin:3.3.0:evaluate -DforceStdout -Dexpression=project.version -q)" >> $GITHUB_OUTPUT
     - name: Deploy snapshot
-      if: github.event_name != 'pull_request' && ${{ matrix.snapshot == '1' }} && endsWith(steps.projectVersion.outputs.version, '-SNAPSHOT')
+      if: github.event_name != 'pull_request' && ${{ matrix.snapshot }} && endsWith(steps.projectVersion.outputs.version, '-SNAPSHOT')
       env:
         CI_DEPLOY_USERNAME: ${{ secrets.CI_DEPLOY_USERNAME }}
         CI_DEPLOY_PASSWORD: ${{ secrets.CI_DEPLOY_PASSWORD }}
         # MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
       run: ./mvnw -B -q -ff -DskipTests -ntp source:jar deploy
     - name: Generate code coverage
-      if: github.event_name != 'pull_request' && ${{ matrix.snapshot == '1' }} && endsWith(steps.projectVersion.outputs.version, '-SNAPSHOT')
+      if: github.event_name != 'pull_request' && ${{ matrix.snapshot }} && endsWith(steps.projectVersion.outputs.version, '-SNAPSHOT')
       run: ./mvnw -B -q -ff -ntp test
     - name: Publish code coverage
-      if: github.event_name != 'pull_request' && ${{ matrix.snapshot == '1' }} && endsWith(steps.projectVersion.outputs.version, '-SNAPSHOT')
+      if: github.event_name != 'pull_request' && ${{ matrix.snapshot }} && endsWith(steps.projectVersion.outputs.version, '-SNAPSHOT')
       uses: codecov/codecov-action@v4
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
