--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,12 +48,9 @@ jobs:
         # See https://github.com/actions/setup-java/blob/v2/docs/advanced-usage.md#Publishing-using-Apache-Maven
         # gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }} # Value of the GPG private key to import
         # gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase
-    - name: Is snapshot/1?
-      if: ${{ github.event_name != 'pull_request' && matrix.snapshot && endsWith(steps.projectVersion.outputs.version, '-SNAPSHOT') }}
-      run: echo "Job DOES have 'matrix.snapshot'!/1"
-    - name: Is snapshot/2?
-      if: ${{ github.event_name != 'pull_request' && matrix.snapshot && !endsWith(steps.projectVersion.outputs.version, '-SNAPSHOT') }}
-      run: echo "Job DOES have 'matrix.snapshot'!/2"
+    - name: Has SNAPSHOT version and is default build?
+      if: ${{ github.event_name != 'pull_request' && matrix.snapshot }}
+      run: echo "Job DOES have 'matrix.snapshot' and has SNAPSHOT as version"
     - name: Build
       # Note: build separately first with default joda
       run: ./mvnw -B -q -ff -ntp -DskipTests clean package
