--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,9 +48,8 @@ jobs:
         # See https://github.com/actions/setup-java/blob/v2/docs/advanced-usage.md#Publishing-using-Apache-Maven
         # gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }} # Value of the GPG private key to import
         # gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase
-    - name: Has SNAPSHOT version and is default build?
-      if: ${{ github.event_name == 'pull_request' && matrix.snapshot }}
-      run: echo "Job DOES have 'matrix.snapshot' and has SNAPSHOT as version"
+    - name: Debug snapshot publish
+      run: echo "matrix.snapshot == ${{ matrix.snapshot }}, gitub.event_name == ${{ github.event_name }}"
     - name: Build
       # Note: build separately first with default joda
       run: ./mvnw -B -q -ff -ntp -DskipTests clean package
